--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,9 @@ language: node_js
 node_js:
   - "10"
 dist: trusty
-sudo: false  
-addons:
-  chrome: stable
-before_install:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+sudo: false
+services:
+  - xvfb
 cache:
   yarn: true
   directories:
