--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ dist: trusty
 sudo: false
 services:
   - xvfb
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 cache:
   yarn: true
   directories:
